--- a/style.css
+++ b/style.css
@@ -34,4 +34,8 @@ body{
 #reset-btn{
     padding: 1rem;
     font-size: 1.25rem;
+    background-color: #191913;
+    color: white;
+    border-radius: 1rem;
+    border: none;
 }
