--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
     box-shadow: 0 0 1rem rgba(0,0,0,0.3);
     font-size: 8vmin;
     color:#b0413e ;
+    background-color: #ffff7f;
 }
 #reset-btn{
     padding: 1rem;
@@ -38,4 +39,23 @@ body{
     color: white;
     border-radius: 1rem;
     border: none;
+}
+#new-btn{
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #191913;
+    color: white;
+    border-radius: 1rem;
+    border: none;
+}
+#msg{
+    color:#ffffc7;
+    font-size: 5vmin;
+
+}
+.msg-container {
+  height: 30vmin;
+}
+.hide{
+    display: none;
 }
